# snip

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  compat.h  config.c  config.h  example.yml  log.c  log.h  main.c  net_util.c  net_util.h  snip.c  snip.h  sniproxy.c  sniproxy.h  sys_util.c  sys_util.h  tls.c  tls.h
cmake/Modules/: FindLibEvent.cmake  FindLibYAML.cmake
docs/: MixedPlatformDiagram.xml
lib/gtest-1.8.0/: .gitignore
tests/: .gitignore  CMakeLists.txt  test-config.cpp  test-tls.cpp
tests/captures/: osx_10.12.3_chrome_57.0.2984.133_client_hello.raw  osx_10.12.3_chrome_60.0.3074.0_with_tls_1.3_client_hello.raw  osx_10.12.3_firefox_3.6.28_client_hello.raw  osx_10.12.3_firefox_52.0.2_client_hello.raw  osx_10.12.3_safari_10.0.3_12602.4.8_client_hello.raw  windows_10_1607_14393.693_edge_38.14393.0.0_client_hello.raw
tests/configs/: example.json  example.yml  extra_keys.yml
tests/lib/gtest-1.8.0/: README.md
